--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "require": "npm i -g sass @vue/cli"
   },
   "repository": {
-      "type": "git",
-      "url": "git+https://github.com/sahrullahh/windzo.git"
+    "type": "git",
+    "url": "git+https://github.com/sahrullahh/windzo.git"
   },
   "homepage": "https://windzo.vercel.app",
   "author": "Mohammad Sahrullah",
@@ -19,6 +19,7 @@
   "dependencies": {
     "apexcharts": "^3.34.0",
     "autoprefixer": "^10",
+    "bp-vuejs-dropdown": "^2.1.1",
     "chart.js": "^3.7.1",
     "core-js": "^3.8.3",
     "flowbite": "^1.4.1",
