--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "vue-perfect-scrollbar": "^0.2.1",
     "vue-router": "^4.0.3",
     "vue3-apexcharts": "^1.4.1",
-    "vue3-perfect-scrollbar": "^1.6.0"
+    "vue3-perfect-scrollbar": "^1.6.0",
+    "vue3-table-lite": "^1.2.0"
   },
   "devDependencies": {
     "@iconify/vue": "^3.2.0",
