--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "apexcharts": "^3.34.0",
     "autoprefixer": "^10",
     "bp-vuejs-dropdown": "^2.1.1",
-    "chart.js": "^3.7.1",
+    "chart.js": "^3.8.0",
     "core-js": "^3.8.3",
     "flowbite": "^1.4.1",
     "lodash": "^4.17.21",
@@ -29,6 +29,7 @@
     "smooth-scrollbar": "^8.7.4",
     "tailwindcss": "^3",
     "vue": "^3.2.13",
+    "vue-chart-3": "^3.1.8",
     "vue-chartjs": "^4.0.2",
     "vue-perfect-scrollbar": "^0.2.1",
     "vue-router": "^4.0.3",
