--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "dependencies": {
     "apexcharts": "^3.34.0",
     "autoprefixer": "^10",
+    "axios": "^0.27.2",
     "bp-vuejs-dropdown": "^2.1.1",
     "chart.js": "^3.7.1",
     "core-js": "^3.8.3",
@@ -32,6 +33,7 @@
     "vue-chartjs": "^4.0.2",
     "vue-perfect-scrollbar": "^0.2.1",
     "vue-router": "^4.0.3",
+    "vue-simple-search-dropdown": "^1.0.1",
     "vue3-apexcharts": "^1.4.1",
     "vue3-perfect-scrollbar": "^1.6.0",
     "vue3-table-lite": "^1.2.0"
